--- a/style.css
+++ b/style.css
@@ -11,3 +11,7 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  interview_test_child
 */
+
+.widget_mrwidget .widget-title {
+  color: red;
+}
